# bifrust-engine

./: Cargo.toml  LICENSE  README.md
resources/: scene.gltf
shaders/: compile.sh  frag.spv  shader.frag  shader.vert
src/: app.rs  descriptors.rs  device.rs  game_object.rs  lib.rs  main.rs  model.rs  pipeline.rs  renderer.rs  simple_render_system.rs  swapchain.rs  window.rs
tests/: window.rs
