[package]
name = "bifrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1" # Simple error handling
log = "0.4" # Used for logging statements
cgmath = "0.18" # Rust replacement for GLM (graphics math library)
png = "0.17" # Used to load PNGs as textures
pretty_env_logger = "0.4" # Print logs to console
thiserror = "1" # Define custom errors types without boilerplate
tobj = { version = "3", features = ["log"] } # Load 3D models in Wavefront .obj format
vulkanalia = { version = "=0.22.0", features = ["libloading", "provisional", "window"] } # Vulkan API wrapper
winit = { version = "0.29.6", features = ["rwh_05"] } # Window handling, forcr raw-window-handle version
wgpu = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
] }
